--- a/Backjoon/Backjoon.vcxproj
+++ b/Backjoon/Backjoon.vcxproj
@@ -143,15 +143,22 @@
     <ClCompile Include="1011_FlyMeToTheAlphaCentauri.cpp" />
     <ClCompile Include="1018_체스판_다시_칠하기.cpp" />
     <ClCompile Include="10250_ACM호텔.cpp" />
+    <ClCompile Include="10814_나이순정렬.cpp" />
     <ClCompile Include="1085_직사각형에서탈출.cpp" />
     <ClCompile Include="10870_피보나치수5.cpp" />
     <ClCompile Include="10872_팩토리얼.cpp" />
     <ClCompile Include="10989_수정렬하기3.cpp" />
     <ClCompile Include="11047_동전0.cpp" />
+    <ClCompile Include="11650_좌표정렬하기.cpp" />
+    <ClCompile Include="11651_좌표정렬하기2.cpp" />
     <ClCompile Include="11729_하노이탑이동순서.cpp" />
+    <ClCompile Include="1181_단어정렬.cpp" />
+    <ClCompile Include="1427_소트인사이드.cpp" />
     <ClCompile Include="1436_영화감독숌.cpp" />
+    <ClCompile Include="15649_N과M1.cpp" />
     <ClCompile Include="1929_소수구하기.cpp" />
     <ClCompile Include="1978_소수찾기.cpp" />
+    <ClCompile Include="2108_통계학.cpp" />
     <ClCompile Include="2231_분해합.cpp" />
     <ClCompile Include="2447_별찍기10.cpp" />
     <ClCompile Include="2581_소수.cpp" />
