--- a/Backjoon/Backjoon.vcxproj.filters
+++ b/Backjoon/Backjoon.vcxproj.filters
@@ -120,6 +120,21 @@
     <ClCompile Include="15649_N과M1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="15650_N과M2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="15651_N과M3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="15652_N과M4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="9663_N-Queen.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2580_스도쿠.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
