--- a/Backjoon/Backjoon.vcxproj
+++ b/Backjoon/Backjoon.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="1181_단어정렬.cpp" />
     <ClCompile Include="1427_소트인사이드.cpp" />
     <ClCompile Include="1436_영화감독숌.cpp" />
+    <ClCompile Include="14888_연산자끼워넣기.cpp" />
+    <ClCompile Include="14889_스타트와링크.cpp" />
     <ClCompile Include="15649_N과M1.cpp" />
     <ClCompile Include="15650_N과M2.cpp" />
     <ClCompile Include="15651_N과M3.cpp" />
